# llm-speedkit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: bench_schema.md  methodology.md  results_week1.md  roadmap.md
llm_speedkit/: cli.py  cli.py.save
llm_speedkit/backends/: __init__.py  base.py  common_http.py  hf.py  triton_http.py  triton_openai.py  vllm.py
llm_speedkit/bench/: hf_bench.py  hf_profile.py
llm_speedkit/core/: config.py  env.py  io.py  stats.py
llm_speedkit/kv/: auto.py  capacity.py  estimate.py  sweep.py
scripts/: plot_kv_sweep.py  write_kv_report.py
